--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "lucia": "^3.0.1",
     "lucide-react": "^0.294.0",
     "monaco-editor": "^0.45.0",
+    "monaco-vim": "^0.4.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
