--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,17 @@
     "@biagram/diagram-engine": "workspace:*",
     "@biagram/shared": "workspace:*",
     "@biagram/spec-generator": "workspace:*",
+    "@catppuccin/codemirror": "^1.0.1",
+    "@codemirror/autocomplete": "^6.19.1",
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/lint": "^6.9.1",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.6",
+    "@lezer/highlight": "^1.2.3",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@monaco-editor/react": "^4.7.0",
     "@node-rs/argon2": "^2.0.2",
@@ -27,21 +38,23 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@replit/codemirror-vim": "^6.3.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@uiw/codemirror-themes": "^4.25.2",
     "@upstash/redis": "^1.25.1",
     "argon2": "^0.31.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "codemirror": "^6.0.2",
     "copy-webpack-plugin": "^13.0.1",
     "drizzle-orm": "^0.29.1",
     "lucia": "^3.0.1",
     "lucide-react": "^0.294.0",
     "monaco-editor": "^0.45.0",
-    "monaco-vim": "^0.4.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
