feat: Add direct database connection and import feature
- Add @biagram/db-introspector package for MySQL/PostgreSQL introspection
- Create database router with connection pool management (5-min TTL)
- Add DB import dialog component with multi-step wizard UI
- Support both Table Center and Editor pages
- Convert database schema to DBML with proper type mapping
- Fix index syntax for single/composite columns
- Fix CURRENT_TIMESTAMP default value handling

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@biagram/db-introspector": "workspace:*",
     "@biagram/dbml-parser": "workspace:*",
     "@biagram/ddl-converter": "workspace:*",
     "@biagram/diagram-engine": "workspace:*",
