feat: Move table comment to header and add FK detection
- Move table note/comment display from below header to next to table name
- Add isForeignKey detection for columns with ref/references
- Remove extra table height calculation for note (now in header)
- FK columns will be highlighted with violet/purple background

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "lucia": "^3.0.1",
     "lucide-react": "^0.294.0",
     "monaco-editor": "^0.45.0",
+    "monaco-vim": "^0.4.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
@@ -73,6 +74,8 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.4",
