--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,6 +55,7 @@
     "copy-webpack-plugin": "^13.0.1",
     "drizzle-orm": "^0.29.1",
     "elkjs": "^0.11.0",
+    "fuse.js": "^7.1.0",
     "lucia": "^3.0.1",
     "lucide-react": "^0.294.0",
     "monaco-editor": "^0.45.0",
